--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -31,7 +31,7 @@ head
       body {
       min-width:768px;
       font-family:roboto-thin;
-      background-color:#DA835E;
+      background-color:#2F83B0;
       }
       .navbar-nav {
        float: right;
@@ -169,15 +169,15 @@ head
       a(href="/logout") Выйти
       img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
     .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;')  
-      .row(style='color:#ccc;')
-        .col-xs-12
-          h1 Settings
       .row(style='color:white;')
         .col-xs-12
           h3(style='color:#004C5E;') Your email:
       .row
         .col-xs-12
-          small #{mail}
+          h2 #{mail}
+      .row(style='color:white;')
+        .col-xs-12
+          h3(style='color:#004C5E;') Your lists are:
       .row
         .col-xs-12
           .btn-group(role="group" aria-label="...")
