--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -29,7 +29,6 @@ head
       src: url('/bootstrap/fonts/Attentica.ttf');
       }
       body {
-      min-width:768px;
       font-family:roboto-thin;
       background-color:#2F83B0;
       }
@@ -174,7 +173,7 @@ head
           h3(style='color:#004C5E;') Your email:
       .row
         .col-xs-12
-          h2 #{mail}
+          h4(style='color:white;') #{mail}
       .row(style='color:white;')
         .col-xs-12
           h3(style='color:#004C5E;') Your lists are:
