--- a/views/mabout.jade
+++ b/views/mabout.jade
@@ -121,7 +121,7 @@ head
         left: -315px;
       }
       .cbp-spmenu-left.cbp-spmenu-open {
-        left: 0px;
+        left: -74px;
       }
       .cbp-spmenu-push {
         overflow-x: hidden;
@@ -199,7 +199,6 @@ head
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
       // 
         form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
           .input-group
@@ -212,6 +211,7 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(class='activemenuitem') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
+      img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
     .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;')
       .row(style='background-color:#2F83B0;')
         .col-xs-12
