--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -29,27 +29,21 @@ head
       }
       h1 {
         font-family:roboto-thin;
-        color:white;
       }
       h2 {
         font-family:roboto-thin;
-        color:white;
       }
       h3 {
         font-family:roboto-thin;
-        color:white;
       }
       h4 {
         font-family:roboto-thin;
-        color:white;
       }
       h5 {
         font-family:roboto-thin;
-        color:white;
       }
       h6 {
         font-family:roboto-thin;
-        color:white;
       }
       textarea:hover, 
       input:hover, 
@@ -166,10 +160,12 @@ head
        #{yet};
       }
       .alreadyb{
-      color:rgba(0, 0, 0, 0.27);
+      color:rgb(0, 0, 0);
+      opacity: 0.27;
       }
       .alreadym{
-      color:rgba(0, 0, 0, 0.21)
+      color:rgb(0, 0, 0);
+      opacity:0.21;
       }
       {
         padding-left:30px;
