--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -161,12 +161,12 @@ head
     //  window.location='http://m.peopleandbooks.com/about';
     //  }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
+      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
       a(href="/") Мои списки
       a(href="/people") Списки друзей
       a(class='activemenuitem') Настройки
       a(href='/about') О проекте
       a(href="/logout") Выйти
-      img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
     .container( id='maincont' style='-webkit-filter:brightness(1);overflow:auto;height:100%;')  
       .row(style='color:white;')
         .col-xs-12
