--- a/views/mpeople.jade
+++ b/views/mpeople.jade
@@ -163,10 +163,10 @@ head
         background-color:#333;
       }
   body
-    script.
-      if(screen.width < 414){
-      window.location='http://m.peopleandbooks.com/about';
-      }
+    //script.
+    //  if(screen.width < 414){
+    //  window.location='http://m.peopleandbooks.com/about';
+    //  }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
         .input-group
