--- a/views/mpeople.jade
+++ b/views/mpeople.jade
@@ -188,6 +188,7 @@ head
       .row
         .col-xs-12(id='inserts')
     button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
+      span(class='glyphicon glyphicon-align-justify ')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(async src='/js/bootstrap.min.js')
     script.
