--- a/views/msettings.jade
+++ b/views/msettings.jade
@@ -207,6 +207,10 @@ head
               input(type="checkbox" id='fourth' ) 
               span(class='glyphicon glyphicon-stop' style='font-size:30px;color:white;')
               span(class='glyphicon glyphicon-stop' style='font-size:30px;color:gray;')
+          .checkbox
+            label
+              input(type="checkbox" id='fifth' ) 
+              span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#2e83b0;')
           button(class='btn btn-default' id='changecolor' type='button') Change color
       #pageoutlink(style='display:none;')
         .row
@@ -263,22 +267,33 @@ head
          $('#third').attr('checked', false);
          $('#second').attr('checked', false);
          $('#fourth').attr('checked', false);
+         $('#fifth').attr('checked', false);
        });
       $('#second').click(function() {
          $(this).attr('checked',true);
          $('#first').attr('checked', false);
          $('#third').attr('checked', false);
+         $('#fifth').attr('checked', false);
        });
       $('#third').click(function() {
          $(this).attr('checked',true);
          $('#first').attr('checked', false);
          $('#second').attr('checked', false);
+         $('#fifth').attr('checked', false);
        });
       $('#fourth').click(function() {
          $(this).attr('checked',true);
          $('#third').attr('checked', false);
          $('#second').attr('checked', false);
          $('#first').attr('checked', false);
+         $('#fifth').attr('checked', false);
+       });
+      $('#fifth').click(function() {
+         $(this).attr('checked',true);
+         $('#third').attr('checked', false);
+         $('#second').attr('checked', false);
+         $('#first').attr('checked', false);
+         $('#fourth').attr('checked', false);
        });
       // RUNREGISTER FUNCTION
       var allowstylechange =1;
@@ -299,6 +314,9 @@ head
       }
       if($('#fourth').is(':checked')){
         style = 4;
+      }
+      if($('#fifth').is(':checked')){
+        style = 5;
       }
       console.log('style: '+style);
       request = new XMLHttpRequest();
