--- a/views/people.jade
+++ b/views/people.jade
@@ -165,7 +165,7 @@ head
       }
       .flick:hover {
         cursor:pointer;
-        background-color:#{bhl};
+        background-color:#2e83b0;
       }
   body
     script.
