--- a/views/people.jade
+++ b/views/people.jade
@@ -26,7 +26,7 @@ head
       }
       body {
       min-width:768px;
-      background-color:#333;
+      background-color:#2e83b0;
       font-family:roboto-thin;
       }
       .container{
@@ -165,7 +165,7 @@ head
       }
       .flick:hover {
         cursor:pointer;
-        background-color:#2e83b0;
+        background-color:rgb(103, 186, 255);
       }
   body
     script.
