--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -184,7 +184,13 @@ head
       .row(style='color:#ccc;')
         .col-xs-12
           h1(style='font-family:roboto-light;') Settings
+      .row(style='color:white;')
+        .col-xs-12
+          h3 Your account:
             small #{mail}
+      .row(style='color:white;')
+        .col-xs-12
+          h3 Your lists are:
       .row.cont
         .col-xs-12
           .btn-group(role="group" aria-label="...")
