--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -187,6 +187,9 @@ head
       .row(style='color:white;')
         .col-xs-12
           h3 Your account:
+      .row(style='color:white;')
+        .col-xs-12
+          h2 
             small #{mail}
       .row(style='color:white;')
         .col-xs-12
