--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -187,7 +187,7 @@ head
       .row(style='color:white;')
         .col-xs-12
           h3 Your account:
-      .row(style='color:white;')
+      .row.cont(style='color:white;')
         .col-xs-12
           h2 
             small #{mail}
