--- a/views/people.jade
+++ b/views/people.jade
@@ -24,6 +24,10 @@ head
       font-family:high;
       src: url('/bootstrap/fonts/Attentica.ttf');
       }
+      @font-face {
+      font-family:roboto-light;
+      src:url('/bootstrap/fonts/Roboto-Light.ttf');
+      }
       body {
       min-width:768px;
       background-color:#2e83b0;
@@ -189,10 +193,9 @@ head
       //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:40px;')  
-      .row(style='background-color:darkgray;')
-        .col-xs-12(id='buttoninsert')
-          h3 People
-          h5(style='margin-bottom:0px;') #{mail}
+      .row(style='color:#ccc;')
+        .col-xs-12
+          h1(style='font-family:roboto-light;') Settings
       .row
         .col-xs-12(id='inserts')
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
