--- a/views/people.jade
+++ b/views/people.jade
@@ -206,7 +206,7 @@ head
           people.forEach(function(element,index,array){
             var rnum = index+1;
             var badgefont = 'font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;';
-            var insert= "<div class='row flick' onclick='away(http://peopleandbooks.com/lists/"+element.uid+")'><div class='col-xs-12'><h4 ><small style='margin-right:10px;'>"+rnum+"</small>"+element.mail;
+            var insert= "<div class='row flick' onclick='away("+element.uid+")'><div class='col-xs-12'><h4 ><small style='margin-right:10px;'>"+rnum+"</small>"+element.mail;
              if(element.newb||element.newm){
               insert+="<span style='margin-left:10px;"+badgefont+"' class='label label-danger'>New items</span>";
              }
@@ -218,7 +218,7 @@ head
          $('#inserts').append("<h4 style='color:white'> Людей нет</h4>");
         }
         function away(dest){
-          eval("window.location('"+dest+"');");
+          eval("window.location('http://peopleandbooks.com/lists/"+dest+"');");
         }
         // Sliding menu mechanics
         var counter =0;
