--- a/views/people.jade
+++ b/views/people.jade
@@ -218,7 +218,7 @@ head
          $('#inserts').append("<h4 style='color:white'> Людей нет</h4>");
         }
         function away(dest){
-          eval("window.location('http://peopleandbooks.com/lists/"+dest+"');");
+          eval("window.location='http://peopleandbooks.com/lists/"+dest+"';");
         }
         // Sliding menu mechanics
         var counter =0;
