--- a/views/people.jade
+++ b/views/people.jade
@@ -246,14 +246,14 @@ head
                          console.log('increase brightness');
                          $('#showLeft').removeClass('active' );
                          $('#cbp-spmenu-s1').removeClass('cbp-spmenu-open' );
-                         $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)'});
+                         $('.container').css({'-webkit-filter':'brightness(1)','-moz-filter':'brightness(1)','filter':'brightness(1)'});
                         break;
                         case(0):
                           counter=1;
                           console.log('decrease brightness');
                           $('#showLeft').addClass('active' );
                           $('#cbp-spmenu-s1').addClass('cbp-spmenu-open' );
-                          $('.container').css({'-webkit-filter':'brightness(0.6)','-moz-filter':'brightness(0.6)'});
+                          $('.container').css({'-webkit-filter':'brightness(0.6)','-moz-filter':'brightness(0.6)','filter':'brightness(0.6)'});
                         break;
                       }
         };
