--- a/views/people.jade
+++ b/views/people.jade
@@ -64,7 +64,7 @@ head
       }
       .container {
         filter:brightness(1);
-        -moz-filter:brightness(1)
+        -moz-filter:brightness(1);
         -webkit-filter:brightness(1);
         transition: 0.5s -webkit-filter linear;
         transition: 0.5s -moz-filter linear;
