--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -581,7 +581,7 @@ head
         }
         else {
           var bid = parsed.bid;
-          $('#addbook').slideToggle();
+          //$('#addbook').slideToggle();
          $('#author').val('');
           $('#booktitle').val('');
           $("#checkbox").prop("newbook", false);
@@ -688,7 +688,6 @@ head
         }
         else {
           var mid = parsed.mid;
-          $('#addmovie').slideToggle();
          $('#year').val('');
           $('#movietitle').val('');
           $("#checkbox").prop("newmovie", false);
